[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version= "=0.5.0-rc.3",  features = ["json" ]}
serde = { version = "1.0.126", features = ["derive"] }
jsonwebtoken = "8"
chrono = "0.4.24"
dotenvy = "0.15.7"
serde_json = "1.0.96"
bcrypt = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["async-std-runtime"]
